Updated file and added new file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			"addressCountry": "KE"
 		},
 		"sameAs": [
-			"https://www.facebook.com/luke.juma.94",
+			"https://www.facebook.co",
 			"https://twitter.com/fraveninteriors",
 			"https://instagram.com/fraveninteriors"
 		]
@@ -85,6 +85,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="services.html">Services</a></li>
 						<li><a href="projects.html">Projects</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 
@@ -375,6 +376,7 @@
 					<p><a href="about.html">About</a></p>
 					<p><a href="services.html">Services</a></p>
 					<p><a href="projects.html">Projects</a></p>
+					<p><a href="gallery.html">Gallery</a></p>
 					<p><a href="contact.html">Contact</a></p>
 				</div>
 
