--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
 						<li><a href="about.html" class="active">About</a></li>
 						<li><a href="services.html">Services</a></li>
 						<li><a href="projects.html">Projects</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 					<a href="contact.html" class="btn btn-primary">Free Quote</a>
@@ -74,7 +75,7 @@
 		<div class="container">
 			<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 64px; align-items: center;">
 				<div>
-					<img src="img/our-studio.jpg" alt="Our Studio"
+					<img src="img/FRAVEN-L.png" alt="Our Studio"
 						style="width: 100%; border-radius: 8px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
 				</div>
 				<div>
@@ -251,6 +252,7 @@
 					<p><a href="about.html">About</a></p>
 					<p><a href="services.html">Services</a></p>
 					<p><a href="projects.html">Projects</a></p>
+					<p><a href="gallery.html">Gallery</a></p>
 					<p><a href="contact.html">Contact</a></p>
 				</div>
 
