--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="services.html">Services</a></li>
 						<li><a href="projects.html" class="active">Projects</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 					<a href="contact.html" class="btn btn-primary">Free Quote</a>
@@ -181,7 +182,7 @@
 					</p>
 					<div style="display: flex; align-items: center;">
 						<div>
-							<h4 style="margin-bottom: 4px; font-size: 16px;">Sarah Johnson</h4>
+							<h4 style="margin-bottom: 4px; font-size: 16px;">Mwai Johnson</h4>
 							<p style="color: #8A949E; font-size: 14px; margin: 0;">Homeowner</p>
 						</div>
 					</div>
@@ -195,7 +196,7 @@
 					</p>
 					<div style="display: flex; align-items: center;">
 						<div>
-							<h4 style="margin-bottom: 4px; font-size: 16px;">Michael Chen</h4>
+							<h4 style="margin-bottom: 4px; font-size: 16px;">Michael Kamau</h4>
 							<p style="color: #8A949E; font-size: 14px; margin: 0;">Business Owner</p>
 						</div>
 					</div>
@@ -209,7 +210,7 @@
 					</p>
 					<div style="display: flex; align-items: center;">
 						<div>
-							<h4 style="margin-bottom: 4px; font-size: 16px;">Emily Rodriguez</h4>
+							<h4 style="margin-bottom: 4px; font-size: 16px;">Emily Cherono</h4>
 							<p style="color: #8A949E; font-size: 14px; margin: 0;">Restaurant Owner</p>
 						</div>
 					</div>
@@ -248,6 +249,7 @@
 					<p><a href="about.html">About</a></p>
 					<p><a href="services.html">Services</a></p>
 					<p><a href="projects.html">Projects</a></p>
+					<p><a href="gallery.html">Gallery</a></p>
 					<p><a href="contact.html">Contact</a></p>
 				</div>
 
