--- a/services.html
+++ b/services.html
@@ -41,6 +41,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="services.html" class="active">Services</a></li>
 						<li><a href="projects.html">Projects</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 					<a href="contact.html" class="btn btn-primary">Free Quote</a>
@@ -283,6 +284,7 @@
 					<p><a href="about.html">About</a></p>
 					<p><a href="services.html">Services</a></p>
 					<p><a href="projects.html">Projects</a></p>
+					<p><a href="gallery.html">Gallery</a></p>
 					<p><a href="contact.html">Contact</a></p>
 				</div>
 
